# sentar

./: .containerignore  .env.example  .gitignore  compose.yaml  docker-compose.yaml  loki-config.yaml  podman-compose.yaml  prometheus.yml  tempo.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-backend.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251109_032731_app_schema.rs  m20251207_021458_decimal_and_object_grid_schema.rs  m20251207_041152_drop_event_object_grid.rs  m20251207_042647_change_time_to_utc.rs  m20251211_142132_jwks.rs  m20251222_073639_form_submission.rs  m20251223_134134_rbac_and_moddatetime.rs  m20251231_065451_add_check_for_event_object.rs  m20260104_122934_add_check_for_reservation.rs  m20260104_141735_add_z_to_event_object_position.rs  m20260114_152506_frontend_request.rs
backend/src/: app.rs  dto.rs  env_vars.rs  error.rs  lib.rs  main.rs  middleware.rs  observe.rs  routes.rs  service.rs
backend/src/app/: cache.rs  db.rs  rate_limit.rs  web_socket.rs
backend/src/dto/: cache.rs  connection_info.rs  event.rs  form.rs  section.rs  workspace.rs
backend/src/dto/form/: submission.rs
backend/src/middleware/: auth.rs  connect_info.rs
backend/src/model/: account.rs  event.rs  event_object.rs  event_object_grid.rs  event_object_position.rs  form.rs  form_submission.rs  jwks.rs  mod.rs  prelude.rs  reservation.rs  reservation_item.rs  seat.rs  section.rs  session.rs  user.rs  verification.rs  workspace.rs  workspace_member.rs  workspace_object.rs
backend/src/routes/: event.rs  form.rs  form_submission.rs  seat.rs  section.rs  websocket.rs  workspace.rs
backend/src/routes/websocket/: orchestrator.rs
backend/src/service/: client_identity.rs  layout.rs  reservation.rs  user_seat_management.rs  workspace_role.rs  ws_message.rs
backend/src/utils/: auth.rs
backend/tests/: test_app.rs  test_event.rs  test_form.rs  test_form_submission.rs  test_section.rs  test_websocket.rs  test_workspace.rs
backend/tests/common/: container.rs  layout.rs  mod.rs  reservation.rs  seeding.rs  server.rs
frontend/: package-lock.json  package.json
frontend/src/app/(auth)/signin/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(creator)/: layout.tsx
frontend/src/app/(creator)/workspaces/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/analytics/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/form/: builder.tsx  page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/grid/: grid-client.tsx  page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/objects/: objects-client.tsx  page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/preview/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/reservations/: page.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/[eventId]/sections/: page.tsx  sections-client.tsx
frontend/src/app/(creator)/workspaces/[workspaceId]/events/new/: page.tsx
frontend/src/app/(creator)/workspaces/new/: page.tsx
frontend/src/app/(responder)/: layout.tsx
frontend/src/app/(responder)/e/[eventId]/: page.tsx
frontend/src/app/(responder)/r/[reservationId]/: page.tsx
frontend/src/app/(responder)/thanks/[submissionId]/: page.tsx
frontend/src/app/api/auth/[...all]/: route.ts
frontend/src/components/auth/: UserMenu.tsx
frontend/src/components/creator/: EventHubTabs.tsx
frontend/src/components/responder/: FormRunner.tsx  HoldTimer.tsx  SeatPicker.tsx
frontend/src/lib/: anon.ts  api.ts  auth-client.ts  auth.ts  types.ts
