[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.6", features=["ws", "macros"]}
axum-server = "0.7.2"
dotenv = "0.15.0"
sea-orm = {version = "1.1.16", features=["runtime-tokio-native-tls", "sqlx-postgres", "mock"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = {version="1.18.1", features=["v4"]}
tokio = {version="1.47.1", features=["full"]}
tokio-tungstenite="0.27.0"
utoipa = {version="5.4.0", features=["chrono", "uuid"]}
utoipa-swagger-ui = {version="9.0.2", features=["axum"]}
utoipa-axum = "0.2.0"
eyre = "0.6.12"
thiserror = "2.0.17"
chrono = "0.4.42"
axum-test = "18.2.1"
axum-prometheus = "0.9.0"
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = {version="0.31.0", features=["grpc-tonic"]}
opentelemetry-stdout = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
