[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.8", features=["ws", "macros"]}
axum-server = "0.8.0"
dotenv = "0.15.0"
sea-orm = {version = "2.0.0-rc.21", features=["runtime-tokio-native-tls", "sqlx-postgres", "mock", "macros"]}
sea-query = "=1.0.0-rc.22"
sea-query-sqlx = "=0.8.0-rc.9"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = {version="0.3.20", features=["env-filter"]}
uuid = {version="1.18.1", features=["v4"]}
tokio = {version="1.48.0", features=["full"]}
utoipa = {version="5.4.0", features=["chrono", "uuid", "axum_extras"]}
utoipa-swagger-ui = {version="9.0.2", features=["axum"]}
utoipa-axum = "0.2.0"
eyre = "0.6.12"
thiserror = "2.0.17"
chrono = "0.4.42"
axum-test = "18.2.1"
axum-prometheus = "0.9.0"
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = {version="0.31.0", features=["grpc-tonic"]}
axum-tracing-opentelemetry = "0.32.2"
axum-extra = {version = "0.12.2", features=["typed-header", "cookie"]}
reqwest = {version="0.12.25", features=["json"]}
# jsonwebtoken = {version="10.2.0", features=["rust_crypto"]}
tower-http = { version = "0.6.8", features = ["cors"] }
fred = {version="10.1.0", features=["mocks"]}
utoipauto = "0.2.0"
