[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version="0.8.8", features=["ws", "macros"]}
axum-server = "0.8.0"
dotenv = "0.15.0"
sea-orm = {version = "2.0.0-rc.28", features=["runtime-tokio-native-tls", "sqlx-postgres", "mock", "macros"]}
# sea-query = "=1.0.0-rc.29"
# sea-query-sqlx = "=0.8.0-rc.11"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = {version="0.3.20", features=["env-filter"]}
uuid = {version="1.18.1", features=["v4", "v7"]}
tokio = {version="1.48.0", features=["full"]}
utoipa = {version="5.4.0", features=["chrono", "uuid", "axum_extras"]}
utoipa-axum = "0.2.0"
eyre = "0.6.12"
thiserror = "2.0.17"
chrono = "0.4.42"
axum-test = {version = "18.2.1", features = ["ws"]}
axum-prometheus = "0.9.0"
tracing-loki = "0.2.6"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = {version="0.31.0", features=["grpc-tonic"]}
axum-tracing-opentelemetry = "0.32.2"
axum-extra = {version = "0.12.2", features=["typed-header", "cookie"]}
# reqwest = {version="0.12.25", features=["json"]}
# jsonwebtoken = {version="10.2.0", features=["rust_crypto"]}
tower-http = { version = "0.6.8", features = ["cors"] }
fred = {version="10.1.0", features=["mocks"]}
utoipauto = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
axum-client-ip = "1.1.3"
envy = "0.4.2"
flume = "0.12.0"
dashmap = "6.1.0"
testcontainers-modules = { version = "0.14.0", features = ["postgres"] }
testcontainers = {version = "0.26.3", features= ["reusable-containers"]}
migration = { path = "migration"}
futures-util = "0.3.31"
